# mlb-rs

./: .gitignore  Cargo.toml  README.md  sandbox.py
src/: functions.rs  generic_stats.rs  lib.rs  main.rs  people.rs  rosters.rs  schemas.rs  stats.rs  utils.rs
src/api/: mod.rs  url.rs
src/api/objects/: game.rs  league.rs  mod.rs  people.rs  roster.rs  stats.rs  team.rs  venue.rs
src/cli/: functions.rs
src/folder/: test.rs
src/objects/: mod.rs  people.rs  rosters.rs  schemas.rs
src/stats/: generic.rs  mod.rs  stat_types.rs  stats.rs
