[package]
name = "mlbapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mlbapi"

[dependencies]
pyo3 = { version = "0.16.4", features = ["extension-module"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"]}
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
